@@ -23,7 +23,7 @@
 #endif
 
 #define LIBIRC_VERSION_HIGH			0x0000
-#define LIBIRC_VERSION_LOW			0x0003
+#define LIBIRC_VERSION_LOW			0x0004
 
 #define LIBIRC_BUFFER_SIZE			1024
 #define LIBIRC_DCC_BUFFER_SIZE		1024
